@@ -34,8 +34,13 @@ INSP.INTN.remove.section.family=Remove section
 INSP.NAME.conda.section.not.allowed.with.run=Conda environments are not allowed with run directive.
 
 #SmkEnvmodulesNotAllowedSectionInspection
-INSP.NAME.envmodules.section.not.allowed.with.title=envmodules directive is not allowed with run
+INSP.NAME.envmodules.section.not.allowed.with.title=The envmodules directive is not allowed with run
 INSP.NAME.envmodules.section.not.allowed.with.run.message=The directive 'envmodules' is only allowed with 'shell', 'script', 'notebook', or 'wrapper' directives (not with run).
+
+# SmkFileEndsWithCommentInspection
+INSP.NAME.file.ends.with.comment.title=Last statement in the file is comment
+INSP.NAME.file.ends.with.comment.message=Snakemake treats a comment in the end of a file as a syntax error. Please add a whitespace after the comment.
+INSP.NAME.file.ends.with.comment.quick.fix=Insert empty line
 
 # SmkSectionMultilineStringArgsInspection.kt
 INSP.NAME.section.multiline.string.args=Multiline section string argument
