@@ -1,0 +1,5 @@
+<html>
+<body>
+Snakemake treats a comment in the end of a file as a syntax error. Please add a whitespace after the comment.
+</body>
+</html>
